--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,13 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <dependency>
+                <groupId>org.jdbi</groupId>
+                <artifactId>jdbi3-bom</artifactId>
+                <type>pom</type>
+                <version>3.49.5</version>
+                <scope>import</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     
@@ -105,6 +112,17 @@
             <groupId>software.xdev</groupId>
             <artifactId>chartjs-java-model</artifactId>
             <version>2.8.1</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.jdbi</groupId>
+            <artifactId>jdbi3-core</artifactId>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.jdbi</groupId>
+            <artifactId>jdbi3-sqlobject</artifactId>
+            <type>jar</type>
         </dependency>
     </dependencies>
     
